# Torrs

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: error.rs  magnet.rs  main.rs  mapper.rs  parser.rs  peer.rs  tracker.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: downloader.rs  main.rs  mapper.rs  parser.rs  peer.rs  tracker.rs
