[package]
name = "torrent"
version = "0.0.0"
authors = ["you"]
edition = "2021"



[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
env_logger = "0.11.5"
serde_json = "1.0.128"
bencode-encoder = "0.1.2"
linked_hash_set = "0.1.4"
sha1 = "0.10.6"
base64 = "0.22.1"
rand = "0.8.5"
url = "2.5.2"
reqwest = "0.12.8"
serde_bencode = "0.2.4"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
serde_bytes = "0.11.15"
hex = "0.4.3"
percent-encoding = "2.3.1"
data-encoding = "2.3.1"
futures = "0.3.31"
