[package]
name = "torrent"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.8.0", features = ["shell-open"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bencode-encoder = "0.1.2"
linked_hash_set= "0.1.4"
sha1 = "0.10.6"
base64 = "0.22.1"
rand = "0.8.5"
url = "2.5.2"
reqwest = "0.12.8"
serde_bencode = "0.2.4"
log = "0.4.22"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
